--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <header>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#bg-01">Home</a></li>
                     <li><a href="#bg-02">About</a></li>
                     <li><a href="#">Resume</a></li>
                     <li><a href="#">Portfólio</a></li>
