adição das redes sociais

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         </main>
             <footer id="rodape">
                 <div class="icons">
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-whatsapp"></i>
-                    <i class="fa-brands fa-github"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                    <a href="https://www.instagram.com/davidcaue_12/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://api.whatsapp.com/send?phone=5588996539399" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://github.com/davidcaue12" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/david-cauê-133742267/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <div class="full-screen">
                     <i class="fa-solid fa-up-down-left-right"></i>
