mudança para portugues

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <header>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#bg-02">About</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#bg-02">Sobre</a></li>
+                    <li><a href="#">Resumo</a></li>
                     <li><a href="#">Portfólio</a></li>
                 </ul>
                 <div class="contato">
@@ -74,7 +74,7 @@
             <div class="about">
                     <div class="about-text">
                         <h1 class="title">
-                            About
+                            Sobre
                         </h1>
                         <span>
                             davidcaue8gmail.com
